flutter_lua_bridge/src/flutter_lua_bridge.h

/* ================================================================
 * C API 函数声明
 * ================================================================ */

typedef struct lua_State lua_State;
/* lua_pcallk */
int flutter_lua_bridge_pcallk(lua_State* L, int nargs, int nresults, int errfunc, int ctx, void* k);
/* lua_pop */
void flutter_lua_bridge_pop(lua_State* L, int n);
/* lua_pushboolean */
void flutter_lua_bridge_pushboolean(lua_State* L, int b);
/* lua_pushcclosure */
void flutter_lua_bridge_pushcclosure(lua_State* L, void* fn, int n);
/* lua_pushcfunction */
void flutter_lua_bridge_pushcfunction(lua_State* L, void* f);
/* lua_pushexternalstring */
const char* flutter_lua_bridge_pushexternalstring(lua_State* L, const char* s, size_t len, void* falloc, void* ud);
/* lua_pushfstring */
const char* flutter_lua_bridge_pushfstring(lua_State* L, const char* fmt);
/* lua_pushglobaltable */
void flutter_lua_bridge_pushglobaltable(lua_State* L);
/* lua_pushinteger */
void flutter_lua_bridge_pushinteger(lua_State* L, int64_t n);
/* lua_pushlightuserdata */
void flutter_lua_bridge_pushlightuserdata(lua_State* L, void* p);
/* lua_pushliteral */
const char* flutter_lua_bridge_pushliteral(lua_State* L, const char* s);
/* lua_pushlstring */
const char* flutter_lua_bridge_pushlstring(lua_State* L, const char* s, size_t len);
/* lua_pushnil */
void flutter_lua_bridge_pushnil(lua_State* L);
/* lua_pushnumber */
void flutter_lua_bridge_pushnumber(lua_State* L, double n);
/* lua_pushstring */
const char* flutter_lua_bridge_pushstring(lua_State* L, const char* s);
/* lua_pushthread */
int flutter_lua_bridge_pushthread(lua_State* L);
/* lua_pushvalue */
void flutter_lua_bridge_pushvalue(lua_State* L, int idx);
/* lua_pushvfstring */
const char* flutter_lua_bridge_pushvfstring(lua_State* L, const char* fmt, ...);
/* lua_rawequal */
int flutter_lua_bridge_rawequal(lua_State* L, int idx1, int idx2);
/* lua_rawget */
int flutter_lua_bridge_rawget(lua_State* L, int idx);
/* lua_rawgeti */
int flutter_lua_bridge_rawgeti(lua_State* L, int idx, int64_t n);
/* lua_rawgetp */
int flutter_lua_bridge_rawgetp(lua_State* L, int idx, const void* p);
/* lua_rawlen */
size_t flutter_lua_bridge_rawlen(lua_State* L, int idx);
/* lua_rawset */
void flutter_lua_bridge_rawset(lua_State* L, int idx);
/* lua_rawseti */
void flutter_lua_bridge_rawseti(lua_State* L, int idx, int64_t n);
/* lua_rawsetp */
void flutter_lua_bridge_rawsetp(lua_State* L, int idx, const void* p);
/* lua_register */
void flutter_lua_bridge_register(lua_State* L, const char* n, void* f);
/* lua_remove */
void flutter_lua_bridge_remove(lua_State* L, int idx);
/* lua_replace */
void flutter_lua_bridge_replace(lua_State* L, int idx);
/* lua_resetthread */
int flutter_lua_bridge_resetthread(lua_State* L);
/* lua_resume */
int flutter_lua_bridge_resume(lua_State* L, lua_State* from, int narg, int* nres);
/* lua_rotate */
void flutter_lua_bridge_rotate(lua_State* L, int idx, int n);
/* lua_setallocf */
void flutter_lua_bridge_setallocf(lua_State* L, void* f, void* ud);
/* lua_setfield */
void flutter_lua_bridge_setfield(lua_State* L, int idx, const char* k);
/* lua_setglobal */
void flutter_lua_bridge_setglobal(lua_State* L, const char* name);
/* lua_sethook */
void flutter_lua_bridge_sethook(lua_State* L, void* func, int mask, int count);
/* lua_seti */
void flutter_lua_bridge_seti(lua_State* L, int idx, int64_t n);
/* lua_setiuservalue */
void flutter_lua_bridge_setiuservalue(lua_State* L, int idx, int n);
/* lua_setlocal */
const char* flutter_lua_bridge_setlocal(lua_State* L, void* ar, int n);
/* lua_setmetatable */
void flutter_lua_bridge_setmetatable(lua_State* L, int idx);
/* lua_settable */
void flutter_lua_bridge_settable(lua_State* L, int idx);
/* lua_settop */
void flutter_lua_bridge_settop(lua_State* L, int idx);
/* lua_setupvalue */
const char* flutter_lua_bridge_setupvalue(lua_State* L, int funcindex, int n);
/* lua_setuservalue */
void flutter_lua_bridge_setuservalue(lua_State* L, int idx);
/* lua_setwarnf */
void flutter_lua_bridge_setwarnf(lua_State* L, void* f, void* ud);
/* lua_status */
int flutter_lua_bridge_status(lua_State* L);
/* lua_stringtonumber */
size_t flutter_lua_bridge_stringtonumber(lua_State* L, const char* s);
/* lua_toboolean */
int flutter_lua_bridge_toboolean(lua_State* L, int idx);
/* lua_tocfunction */
void* flutter_lua_bridge_tocfunction(lua_State* L, int idx);
/* lua_toclose */
void flutter_lua_bridge_toclose(lua_State* L, int idx);
/* lua_tointeger */
int64_t flutter_lua_bridge_tointeger(lua_State* L, int idx);
/* lua_tointegerx */
int64_t flutter_lua_bridge_tointegerx(lua_State* L, int idx, int* isnum);
/* lua_tolstring */
const char* flutter_lua_bridge_tolstring(lua_State* L, int idx, size_t* len);
/* lua_tonumber */
double flutter_lua_bridge_tonumber(lua_State* L, int idx);
/* lua_tonumberx */
double flutter_lua_bridge_tonumberx(lua_State* L, int idx, int* isnum);
/* lua_topointer */
const void* flutter_lua_bridge_topointer(lua_State* L, int idx);
/* lua_tostring */
const char* flutter_lua_bridge_tostring(lua_State* L, int idx);
/* lua_tothread */
lua_State* flutter_lua_bridge_tothread(lua_State* L, int idx);