flutter_lua_bridge/lib/src/gen/flutter_lua_bridge.g.dart


/// lua_pcallk
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Void>,
  )
>()
external int flutter_lua_bridge_pcallk(
  ffi.Pointer<lua_State> L,
  int nargs,
  int nresults,
  int errfunc,
  int ctx,
  ffi.Pointer<ffi.Void> k,
);

/// lua_pop
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_pop(ffi.Pointer<lua_State> L, int n);

/// lua_pushboolean
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_pushboolean(ffi.Pointer<lua_State> L, int b);

/// lua_pushcclosure
@ffi.Native<
  ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Void>, ffi.Int)
>()
external void flutter_lua_bridge_pushcclosure(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> fn,
  int n,
);

/// lua_pushcfunction
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Void>)>()
external void flutter_lua_bridge_pushcfunction(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> f,
);

/// lua_pushexternalstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Void>,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_pushexternalstring(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> s,
  int len,
  ffi.Pointer<ffi.Void> falloc,
  ffi.Pointer<ffi.Void> ud,
);

/// lua_pushfstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_pushfstring(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> fmt,
);

/// lua_pushglobaltable
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>)>()
external void flutter_lua_bridge_pushglobaltable(ffi.Pointer<lua_State> L);

/// lua_pushinteger
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int64)>()
external void flutter_lua_bridge_pushinteger(ffi.Pointer<lua_State> L, int n);

/// lua_pushlightuserdata
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Void>)>()
external void flutter_lua_bridge_pushlightuserdata(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> p,
);

/// lua_pushliteral
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_pushliteral(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> s,
);

/// lua_pushlstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_pushlstring(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> s,
  int len,
);

/// lua_pushnil
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>)>()
external void flutter_lua_bridge_pushnil(ffi.Pointer<lua_State> L);

/// lua_pushnumber
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Double)>()
external void flutter_lua_bridge_pushnumber(ffi.Pointer<lua_State> L, double n);

/// lua_pushstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_pushstring(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> s,
);

/// lua_pushthread
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>)>()
external int flutter_lua_bridge_pushthread(ffi.Pointer<lua_State> L);

/// lua_pushvalue
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_pushvalue(ffi.Pointer<lua_State> L, int idx);

/// lua_pushvfstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_pushvfstring(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> fmt,
);

/// lua_rawequal
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external int flutter_lua_bridge_rawequal(
  ffi.Pointer<lua_State> L,
  int idx1,
  int idx2,
);

/// lua_rawget
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_rawget(ffi.Pointer<lua_State> L, int idx);

/// lua_rawgeti
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int64)>()
external int flutter_lua_bridge_rawgeti(
  ffi.Pointer<lua_State> L,
  int idx,
  int n,
);

/// lua_rawgetp
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Void>)
>()
external int flutter_lua_bridge_rawgetp(
  ffi.Pointer<lua_State> L,
  int idx,
  ffi.Pointer<ffi.Void> p,
);

/// lua_rawlen
@ffi.Native<ffi.Size Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_rawlen(ffi.Pointer<lua_State> L, int idx);

/// lua_rawset
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_rawset(ffi.Pointer<lua_State> L, int idx);

/// lua_rawseti
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int64)>()
external void flutter_lua_bridge_rawseti(
  ffi.Pointer<lua_State> L,
  int idx,
  int n,
);

/// lua_rawsetp
@ffi.Native<
  ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Void>)
>()
external void flutter_lua_bridge_rawsetp(
  ffi.Pointer<lua_State> L,
  int idx,
  ffi.Pointer<ffi.Void> p,
);

/// lua_register
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Void>,
  )
>()
external void flutter_lua_bridge_register(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> n,
  ffi.Pointer<ffi.Void> f,
);

/// lua_remove
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_remove(ffi.Pointer<lua_State> L, int idx);

/// lua_replace
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_replace(ffi.Pointer<lua_State> L, int idx);

/// lua_resetthread
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>)>()
external int flutter_lua_bridge_resetthread(ffi.Pointer<lua_State> L);

/// lua_resume
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
  )
>()
external int flutter_lua_bridge_resume(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<lua_State> from,
  int narg,
  ffi.Pointer<ffi.Int> nres,
);

/// lua_rotate
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external void flutter_lua_bridge_rotate(
  ffi.Pointer<lua_State> L,
  int idx,
  int n,
);

/// lua_setallocf
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Void>,
  )
>()
external void flutter_lua_bridge_setallocf(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> f,
  ffi.Pointer<ffi.Void> ud,
);

/// lua_setfield
@ffi.Native<
  ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Char>)
>()
external void flutter_lua_bridge_setfield(
  ffi.Pointer<lua_State> L,
  int idx,
  ffi.Pointer<ffi.Char> k,
);

/// lua_setglobal
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external void flutter_lua_bridge_setglobal(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> name,
);

/// lua_sethook
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Void>,
    ffi.Int,
    ffi.Int,
  )
>()
external void flutter_lua_bridge_sethook(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> func,
  int mask,
  int count,
);

/// lua_seti
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int64)>()
external void flutter_lua_bridge_seti(ffi.Pointer<lua_State> L, int idx, int n);

/// lua_setiuservalue
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external void flutter_lua_bridge_setiuservalue(
  ffi.Pointer<lua_State> L,
  int idx,
  int n,
);

/// lua_setlocal
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Void>,
    ffi.Int,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_setlocal(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> ar,
  int n,
);

/// lua_setmetatable
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_setmetatable(
  ffi.Pointer<lua_State> L,
  int idx,
);

/// lua_settable
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_settable(ffi.Pointer<lua_State> L, int idx);

/// lua_settop
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_settop(ffi.Pointer<lua_State> L, int idx);

/// lua_setupvalue
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_setupvalue(
  ffi.Pointer<lua_State> L,
  int funcindex,
  int n,
);

/// lua_setuservalue
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_setuservalue(
  ffi.Pointer<lua_State> L,
  int idx,
);

/// lua_setwarnf
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Void>,
  )
>()
external void flutter_lua_bridge_setwarnf(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> f,
  ffi.Pointer<ffi.Void> ud,
);

/// lua_status
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>)>()
external int flutter_lua_bridge_status(ffi.Pointer<lua_State> L);

/// lua_stringtonumber
@ffi.Native<ffi.Size Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external int flutter_lua_bridge_stringtonumber(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> s,
);

/// lua_toboolean
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_toboolean(ffi.Pointer<lua_State> L, int idx);

/// lua_tocfunction
@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<lua_State>, ffi.Int)>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_tocfunction(
  ffi.Pointer<lua_State> L,
  int idx,
);

/// lua_toclose
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridge_toclose(ffi.Pointer<lua_State> L, int idx);

/// lua_tointeger
@ffi.Native<ffi.Int64 Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridge_tointeger(ffi.Pointer<lua_State> L, int idx);

/// lua_tointegerx
@ffi.Native<
  ffi.Int64 Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Int>)
>()
external int flutter_lua_bridge_tointegerx(
  ffi.Pointer<lua_State> L,
  int idx,
  ffi.Pointer<ffi.Int> isnum,
);

/// lua_tolstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_tolstring(
  ffi.Pointer<lua_State> L,
  int idx,
  ffi.Pointer<ffi.Size> len,
);

/// lua_tonumber
@ffi.Native<ffi.Double Function(ffi.Pointer<lua_State>, ffi.Int)>()
external double flutter_lua_bridge_tonumber(ffi.Pointer<lua_State> L, int idx);

/// lua_tonumberx
@ffi.Native<
  ffi.Double Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Int>)
>()
external double flutter_lua_bridge_tonumberx(
  ffi.Pointer<lua_State> L,
  int idx,
  ffi.Pointer<ffi.Int> isnum,
);

/// lua_topointer
@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<lua_State>, ffi.Int)>()
external ffi.Pointer<ffi.Void> flutter_lua_bridge_topointer(
  ffi.Pointer<lua_State> L,
  int idx,
);

/// lua_tostring
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Int)>()
external ffi.Pointer<ffi.Char> flutter_lua_bridge_tostring(
  ffi.Pointer<lua_State> L,
  int idx,
);

/// lua_tothread
@ffi.Native<ffi.Pointer<lua_State> Function(ffi.Pointer<lua_State>, ffi.Int)>()
external ffi.Pointer<lua_State> flutter_lua_bridge_tothread(
  ffi.Pointer<lua_State> L,
  int idx,
);
